added chapter 4 abstract

--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -1,6 +1,15 @@
 \chapter{Cooperation between TMHs facilitates translocation of relatively polar TMHs.}
 \chaptermark{Cooperation between TMHs...}
 \section{Abstract}
+
+Marginally hydrophobic transmembrane helices perform a variety of essential for life intra-membrane molecular biochemistry.
+However, due to their relatively polar composition, they often lack sufficient hydrophobicity by themselves to incorporate into the membrane efficiently via the translocon.
+Other elements of the sequence context, such as other transmembrane helices or flexible loop regions, allow the marginally hydrophobic transmembrane regions to integrate into the membrane environment.
+Here we analyse large numbers of multipass transmembrane protein sequences stratified by protein families and molecular functions to show that there are conserved stark differences between sequentially adjacent transmembrane helices in terms of hydrophobicity and TMSOC complexity.
+Not all classes of transmembrane protein have these highly polar\--hydrophobic pairs.
+In the instances of GPCRs and ion channels, there is evidence in the literature to support cooperative insertion between the these highly polar\--hydrophobic transmembrane helix pairs highlighted in our results.
+We propose that such methods may be used to identify other examples of undocumented cooperative transmembrane helix insertion into the membrane.
+
 \section{Introduction}
 
 Translocation is the process of incorporating a \gls{tmp} into the membrane.
@@ -13,8 +22,6 @@ It has long been understood that this method is essentially the ~\gls{srp} recog
 Crystal structures showed the \gls{srp} targets the nascent peptide chain for membrane insertion via a GTPase in both the \gls{srp} and \gls{sr}, that is initially associated with the translocon machinery, coming together to form a complex thus bringing the nascent peptide chain in proximity to the translocon~\cite{Shan2005}.
 Mutant studies of \gls{srp} revealed key discrete conformational stages~\cite{Shan2005}.
 These are the specific recognition of signal sequences on cargo proteins, the targeting of the package to the membrane, the handing over of the cargo to the translocation machinery all the while maintaining precise spatial and temporal coordination of each molecular event \cite{Saraogi2011}.
-
-%Section on translocon
 
 %NOPI rules
 
