--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,111 @@
+@article{Fischer1994,
+abstract = {Porins are voltage-gated diffusion pores found in all eukaryotic kingdoms. Here we describe, for the first time, the identification and characterization of two cDNAs encoding porins from plants. Peptide sequences obtained from a 30-kDa protein of envelope membranes from pea root plastids allowed the isolation of two cDNA clones from pea and maize. On the protein level, both proteins are homologous by 58{\%}. Sequence comparison against the Swiss-Prot sequence data base revealed a homology of about 25{\%} to mitochondrial porins from fungi and human. Computer-aided predictions of the secondary structure of the plant porins revealed the presence of 16 antiparallel beta-strands that are also found in mitochondrial porins. Porins from non-green plastids and from the outer mitochondrial membrane were reconstituted into planar lipid bilayers. The proteins showed high pore-forming activities and similar single-channel conductances. In vitro translated porin was preferentially imported only into non-green plastids but not into chloroplasts. To our knowledge, this is the first example of selective import of a plastid protein into different types of plastids. This finding is in line with the observation that an immunoreactive 30-kDa band was only found in non-green plastids and mitochondria but not in chloroplasts. We conclude that mitochondria and non-green plastids possess homologous porin proteins, whereas chloroplasts are characterized by a different type of porin.},
+author = {Fischer, K and Weber, A and Brink, S and Arbinger, B and Sch{\"{u}}nemann, D and Borchert, S and Heldt, H W and Popp, B and Benz, R and Link, T A},
+issn = {0021-9258},
+journal = {The Journal of biological chemistry},
+month = {oct},
+number = {41},
+pages = {25754--60},
+pmid = {7523392},
+title = {{Porins from plants. Molecular cloning and functional characterization of two new members of the porin family.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/7523392},
+volume = {269},
+year = {1994}
+}
+@article{Zeth2010,
+abstract = {Gram-negative bacteria and mitochondria are both covered by two distinct biological membranes. These membrane systems have been maintained during the course of evolution from an early evolutionary precursor. Both outer membranes accommodate channels of the porin family, which are designed for the uptake and exchange of metabolites, including ions and small molecules, such as nucleosides or sugars. In bacteria, the structure of the outer membrane porin protein family of $\beta$-barrels is generally characterized by an even number of $\beta$-strands; usually 14, 16 or 18 strands are observed forming the bacterial porin barrel wall. In contrast, the recent structures of the mitochondrial porin, also known as VDAC (voltage-dependent anion channel), show an uneven number of 19 $\beta$-strands, but a similar molecular architecture. Despite the lack of a clear evolutionary link between these protein families, their common principles and differences in assembly, architecture and function are summarized in the present review.},
+author = {Zeth, Kornelius and Thein, Marcus},
+doi = {10.1042/BJ20100371},
+issn = {0264-6021},
+journal = {Biochemical Journal},
+month = {oct},
+number = {1},
+pages = {13--22},
+pmid = {20836765},
+title = {{Porins in prokaryotes and eukaryotes: common themes and variations}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/20836765 http://biochemj.org/lookup/doi/10.1042/BJ20100371},
+volume = {431},
+year = {2010}
+}
+@article{Fairman2011,
+abstract = {The outer membranes of Gram-negative bacteria, mitochondria, and chloroplasts all contain transmembrane $\beta$-barrel proteins. These $\beta$-barrel proteins serve essential functions in cargo transport and signaling and are also vital for membrane biogenesis. They have also been adapted to perform a diverse set of important cellular functions including acting as porins, transporters, enzymes, virulence factors and receptors. Recent structures of transmembrane $\beta$-barrels include that of a full length autotransporter (EstA), a bacterial heme transporter complex (HasR), a bacterial porin in complex with several ligands (PorB), and the mitochondrial voltage-dependent anion channel (VDAC) from both mouse and human. These represent only a few of the interesting structures of $\beta$-barrel membrane proteins recently elucidated. However, they demonstrate many of the advancements made within the field of transmembrane protein structure in the past few years.},
+author = {Fairman, James W and Noinaj, Nicholas and Buchanan, Susan K},
+doi = {10.1016/j.sbi.2011.05.005},
+issn = {0959440X},
+journal = {Current Opinion in Structural Biology},
+month = {aug},
+number = {4},
+pages = {523--531},
+pmid = {21719274},
+title = {{The structural biology of $\beta$-barrel membrane proteins: a summary of recent reports}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/21719274 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3164749 http://linkinghub.elsevier.com/retrieve/pii/S0959440X11000935},
+volume = {21},
+year = {2011}
+}
+@article{Wimley2003,
+abstract = {The $\beta$-barrel membrane protein is found in the outer membranes of bacteria, mitochondria and chloroplasts. Approximately 2–3{\%} of the genes in Gram-negative bacterial genomes encode $\beta$-barrels. Whereas there are fewer than 20 known three-dimensional $\beta$-barrel structures, genomic databases currently contain thousands of $\beta$-barrels belonging to dozens of families. New research is revealing the variety of $\beta$-barrel structures and the variety of functions performed by these versatile proteins.},
+author = {Wimley, William C},
+doi = {10.1016/S0959-440X(03)00099-X},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Wimley - 2003 - The versatile $\beta$-barrel membrane protein.pdf:pdf},
+issn = {0959-440X},
+journal = {Current Opinion in Structural Biology},
+month = {aug},
+number = {4},
+pages = {404--411},
+publisher = {Elsevier Current Trends},
+title = {{The versatile $\beta$-barrel membrane protein}},
+url = {https://www.sciencedirect.com/science/article/pii/S0959440X0300099X},
+volume = {13},
+year = {2003}
+}
+@article{Ojemalm2012,
+abstract = {$\alpha$-helical integral membrane proteins critically depend on the correct insertion of their transmembrane $\alpha$ helices into the lipid bilayer for proper folding, yet a surprisingly large fraction of the transmembrane $\alpha$ helices in multispanning integral membrane proteins are not sufficiently hydrophobic to insert into the target membrane by themselves. How can such marginally hydrophobic segments nevertheless form transmembrane helices in the folded structure? Here, we show that a transmembrane helix with a strong orientational preference (Ncyt-Clum or Nlum-Ccyt) can both increase and decrease the hydrophobicity threshold for membrane insertion of a neighboring, marginally hydrophobic helix. This effect helps explain the “missing hydrophobicity” in polytopic membrane proteins.},
+author = {{\"{O}}jemalm, Karin and Halling, Katrin K. and Nilsson, IngMarie and von Heijne, Gunnar},
+doi = {10.1016/J.MOLCEL.2011.12.024},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/{\"{O}}jemalm et al. - 2012 - Orientational Preferences of Neighboring Helices Can Drive ER Insertion of a Marginally Hydrophobic Transmembra.pdf:pdf},
+issn = {1097-2765},
+journal = {Molecular Cell},
+month = {feb},
+number = {4},
+pages = {529--540},
+publisher = {Cell Press},
+title = {{Orientational Preferences of Neighboring Helices Can Drive ER Insertion of a Marginally Hydrophobic Transmembrane Helix}},
+url = {https://www.sciencedirect.com/science/article/pii/S109727651101001X},
+volume = {45},
+year = {2012}
+}
+@article{Hedin2010,
+abstract = {In mammalian cells, most integral membrane proteins are initially inserted into the endoplasmic reticulum membrane by the so-called Sec61 translocon. However, recent predictions suggest that many transmembrane helices (TMHs) in multispanning membrane proteins are not sufficiently hydrophobic to be recognized as such by the translocon. In this study, we have screened 16 marginally hydrophobic TMHs from membrane proteins of known three-dimensional structure. Indeed, most of these TMHs do not insert efficiently into the endoplasmic reticulum membrane by themselves. To test if loops or TMHs immediately upstream or downstream of a marginally hydrophobic helix might influence the insertion efficiency, insertion of marginally hydrophobic helices was also studied in the presence of their neighboring loops and helices. The results show that flanking loops and nearest-neighbor TMHs are sufficient to ensure the insertion of many marginally hydrophobic helices. However, for at least two of the marginally hydrophobic helices, the local interactions are not enough, indicating that post-insertional rearrangements are involved in the folding of these proteins.},
+author = {Hedin, Linnea E. and {\"{O}}jemalm, Karin and Bernsel, Andreas and Hennerdal, Aron and Illerg{\aa}rd, Kristoffer and Enquist, Karl and Kauko, Anni and Cristobal, Susana and von Heijne, Gunnar and Lerch-Bader, Mirjam and Nilsson, IngMarie and Elofsson, Arne},
+doi = {10.1016/J.JMB.2009.11.036},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Hedin et al. - 2010 - Membrane Insertion of Marginally Hydrophobic Transmembrane Helices Depends on Sequence Context(2).pdf:pdf},
+issn = {0022-2836},
+journal = {Journal of Molecular Biology},
+month = {feb},
+number = {1},
+pages = {221--229},
+publisher = {Academic Press},
+title = {{Membrane Insertion of Marginally Hydrophobic Transmembrane Helices Depends on Sequence Context}},
+url = {https://www.sciencedirect.com/science/article/pii/S0022283609014132},
+volume = {396},
+year = {2010}
+}
+@article{Kauko2010,
+abstract = {We have determined the optimal placement of individual transmembrane helices in the Pyrococcus horikoshii GltPh glutamate transporter homolog in the membrane. The results are in close agreement with theoretical predictions based on hydrophobicity, but do not, in general, match the known three-dimensional structure, suggesting that transmembrane helices can be repositioned relative to the membrane during folding and oligomerization. Theoretical analysis of a database of membrane protein structures provides additional support for this idea. These observations raise new challenges for the structure prediction of membrane proteins and suggest that the classical two-stage model often used to describe membrane protein folding needs to be modified.},
+author = {Kauko, Anni and Hedin, Linnea E. and Thebaud, Estelle and Cristobal, Susana and Elofsson, Arne and von Heijne, Gunnar},
+doi = {10.1016/J.JMB.2010.01.042},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Kauko et al. - 2010 - Repositioning of Transmembrane $\alpha$-Helices during Membrane Protein Folding.pdf:pdf},
+issn = {0022-2836},
+journal = {Journal of Molecular Biology},
+month = {mar},
+number = {1},
+pages = {190--201},
+publisher = {Academic Press},
+title = {{Repositioning of Transmembrane $\alpha$-Helices during Membrane Protein Folding}},
+url = {https://www.sciencedirect.com/science/article/pii/S0022283610000884},
+volume = {397},
+year = {2010}
+}
 @article{Gambale2006,
 abstract = {Potassium (K+), the most abundant cation in biological organisms, plays a crucial role in the survival and development of plant cells, modulation of basic mechanisms such as enzyme activity, electrical membrane potentials, plant turgor and cellular homeostasis. Due to the absence of a Na+/K+ exchanger, which widely exists in animal cells, K+ channels and some type of K+ transporters function as K+ uptake systems in plants. Plant voltage-dependent K+ channels, which display striking topological and functional similarities with the voltage-dependent six-transmembrane segment animal Shaker-type K+ channels, have been found to play an important role in the plasma membrane of a variety of tissues and organs in higher plants. Outward-rectifying, inward-rectifying and weakly-rectifying K+ channels have been identified and play a crucial role in K+ homeostasis in plant cells. To adapt to the environmental conditions, plants must take advantage of the large variety of Shaker-type K+ channels naturally present in the plant kingdom. This review summarizes the extensive data on the structure, function, membrane topogenesis, heteromerization, expression, localization, physiological roles and modulation of Shaker-type K+ channels from various plant species. The accumulated results also help in understanding the similarities and differences in the properties of Shaker-type K+ channels in plants in comparison to those of Shaker channels in animals and bacteria.},
 author = {Gambale, F and Uozumi, N},
